# farrealms-rust

./: Cargo.toml  README
migrations/2021-07-26-011117_init/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
