[package]
name = "farrealms-rust"
version = "0.1.0"
authors = ["Eric Bridgeford <misterbr@gmail.com>"]
edition = "2018"

[dependencies]
juniper = "0.15.7"
juniper_rocket = "0.8.0"
chrono = { version = "0.4.11", features = ["serde"] }
rocket = { version = "0.5.0-rc.1", default-features = false }
diesel = { version = "1.4.6", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.58"